--- a/views/documentation/documentation.haml
+++ b/views/documentation/documentation.haml
@@ -33,7 +33,7 @@
 
     %div.span9
 
-      %h1#nav_home API Documentation
+      %h1#nav_home EcoPortal API Documentation
       %h2#nav_usage General Usage
       %p
         This API is comprised of a set of resources (Ontologies, Classes, etc) and related endpoints (Search, Annotator, Recommender)
